# flutter_ffi_template

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_ffi_template/: MainActivity.kt
ffi/: .clang-tidy  CMakeLists.txt  build.dart  configure.dart
ffi/src/: .clang-format  CMakeLists.txt  native_lib.cpp  native_lib.h
lib/: main.dart
lib/native_lib/: generated_native_lib.dart  native_lib.dart
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
